--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,12 @@ distro==1.9.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl
 exceptiongroup==1.2.0
 executing==2.0.1
+filelock==3.17.0
+fsspec==2025.2.0
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
+huggingface-hub==0.28.1
 idna==3.6
 ipykernel==6.29.3
 ipython==8.22.2
@@ -31,9 +34,24 @@ jupyter_core==5.7.2
 langcodes==3.3.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
+mpmath==1.3.0
 murmurhash==1.0.10
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 openai==1.14.1
 packaging==23.2
 pandas==2.2.1
@@ -51,8 +69,11 @@ Pygments==2.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
 pyzmq==25.1.2
+regex==2024.11.6
 requests==2.31.0
+safetensors==0.5.2
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.1
@@ -62,10 +83,15 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 stack-data==0.6.3
+sympy==1.13.1
 thinc==8.2.3
+tokenizers==0.21.0
+torch==2.6.0
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
+transformers==4.49.0
+triton==3.2.0
 typer==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
