--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
 Jinja2==3.1.3
+joblib==1.4.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 langcodes==3.3.0
@@ -57,6 +58,7 @@ packaging==23.2
 pandas==2.2.1
 parso==0.8.3
 pexpect==4.9.0
+pillow==11.1.0
 platformdirs==4.2.0
 preshed==3.0.9
 prompt-toolkit==3.0.43
@@ -74,6 +76,9 @@ pyzmq==25.1.2
 regex==2024.11.6
 requests==2.31.0
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.1
@@ -85,6 +90,7 @@ srsly==2.4.8
 stack-data==0.6.3
 sympy==1.13.1
 thinc==8.2.3
+threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.6.0
 tornado==6.4
