--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ Thumbs.db
 results/press_releases/relevant_press_releases.csv
 results/press_releases/embeddings.csv
 results/press_releases/press_release_scores.csv
+results/press_releases/filtered_press_releases.csv
+temp/
