--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ click==8.1.7
 cloudpathlib==0.16.0
 comm==0.2.2
 confection==0.1.4
+contourpy==1.3.1
+cycler==0.12.1
 cymem==2.0.8
 datasets==3.3.2
 debugpy==1.8.1
@@ -27,6 +29,7 @@ en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_
 exceptiongroup==1.2.0
 executing==2.0.1
 filelock==3.17.0
+fonttools==4.56.0
 frozenlist==1.5.0
 fsspec==2024.12.0
 h11==0.14.0
@@ -42,8 +45,10 @@ jiter==0.8.2
 joblib==1.4.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 langcodes==3.3.0
 MarkupSafe==2.1.5
+matplotlib==3.10.1
 matplotlib-inline==0.1.6
 mpmath==1.3.0
 multidict==6.1.0
@@ -82,6 +87,7 @@ pyarrow==19.0.1
 pydantic==2.6.3
 pydantic_core==2.16.3
 Pygments==2.17.2
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
@@ -105,6 +111,7 @@ stack-data==0.6.3
 sympy==1.13.1
 thinc==8.2.3
 threadpoolctl==3.5.0
+tiktoken==0.9.0
 tokenizers==0.21.0
 torch==2.6.0
 tornado==6.4
